<resources>
    <string name="app_name">VisitingCard</string>
    <string name="card_logo">TODO</string>
    <string name="blips_and_chitz">Blips and Chitz</string>
    <string name="logo">TODO</string>
    <string name="wubba_lubba_dub_dub">Wubba Lubba dub-dub</string>
    <string name="name_icon">TODO</string>
    <string name="krombopulos_michael">Krombopulos Michael</string>
    <string name="assistant_manager">Assistant Manager</string>
    <string name="_9845653832">9845653832</string>
    <string name="michael_gmail_com">michael@gmail.com</string>
</resources>