<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9A825"
    tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="650dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <View
                    android:id="@+id/view2"
                    android:layout_width="350dp"
                    android:layout_height="425dp"
                    android:background="#474543"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/blips_and_chitz"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.203" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/wubba_lubba_dub_dub"
                    android:textColor="#534C4C"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintVertical_bias="0.017" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="139dp"
                    android:layout_height="137dp"
                    android:contentDescription="@string/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/pp_840x830_pad_1000x1000_f8f8f8_u3" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="350dp"
                    android:layout_height="5dp"
                    android:background="#F9A825"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.343" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/name_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_person_24" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/krombopulos_michael"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.614"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view2"
                    app:layout_constraintVertical_bias="0.211" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toStartOf="@+id/textView8"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_alternate_email_24" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="44dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/michael_gmail_com"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.573"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toStartOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_work_24" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/assistant_manager"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.528"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.02" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView10"
                    app:layout_constraintEnd_toStartOf="@+id/textView10"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView10"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_phone_24" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/_9845653832"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.405"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toStartOf="@+id/textView11"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_place_24" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="221B Baker Street"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

